# sp1-log0-summer

./: Cargo.toml
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
