[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-primitives = "0.8.5"
alloy-sol-types = "0.8.5"
sp1-zkvm = "2.0.0"
sp1-sdk = "2.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
log0-summer-lib = { path = "./lib" }
reth-primitives = { git = "https://github.com/sp1-patches/reth", tag = "rsp-20240830", default-features = false, features = [
    "alloy-compat",
    "std",
] }
alloy-rlp = "0.3.8"
alloy-rpc-types-eth = "0.4.2"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
