[package]
version = "0.1.0"
name = "log0-summer-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk.workspace = true
serde.workspace = true
reth-primitives.workspace = true
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types.workspace = true
log0-summer-lib.workspace = true
tokio = "1.40.0"
alloy-provider = {version = "0.4.2", default-features = false, features = ["reqwest", "rpc-api"]}
eyre = "0.6.12"
futures = "0.3.30"

[build-dependencies]
sp1-helper = "2.0.0"
